samples/_failures_safe/1761486730_2491bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee2e4d0f.c: In function ‘main’:
./samples/SAFE/__tmp_ee2e4d0f.c:136:24: error: missing terminating " character
  136 |                 printf("Invalid timestamp format. Use: Y
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ee2e4d0f.c:136:17: error: expected expression at end of input
  136 |                 printf("Invalid timestamp format. Use: Y
      |                 ^~~~~~
./samples/SAFE/__tmp_ee2e4d0f.c:136:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee2e4d0f.c:136:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee2e4d0f.c:136:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee2e4d0f.c:136:17: error: expected declaration or statement at end of input
